# ChangeLog for app-arch/gzip
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/gzip/ChangeLog,v 1.121 2012/09/09 15:56:45 armin76 Exp $

  09 Sep 2012; Raúl Porcel <armin76@gentoo.org> gzip-1.5.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #431844

  20 Aug 2012; Anthony G. Basile <blueness@gentoo.org> gzip-1.5.ebuild:
  Stable arm, bug #431844

  20 Aug 2012; Anthony G. Basile <blueness@gentoo.org> gzip-1.5.ebuild:
  Stable ppc ppc64, bug #431844

  20 Aug 2012; Jeroen Roovers <jer@gentoo.org> gzip-1.5.ebuild:
  Stable for HPPA (bug #431844).

  19 Aug 2012; Johannes Huber <johu@gentoo.org> gzip-1.5.ebuild:
  Stable for x86, wrt bug #431844

  19 Aug 2012; Agostino Sarubbo <ago@gentoo.org> gzip-1.5.ebuild:
  Stable for amd64, wrt bug #431844

  06 Jul 2012; Mike Frysinger <vapier@gentoo.org> gzip-1.4.ebuild,
  gzip-1.5.ebuild:
  Change license to GPLv3 #425072 by Nanouck.

*gzip-1.5 (17 Jun 2012)

  17 Jun 2012; Mike Frysinger <vapier@gentoo.org> +gzip-1.5.ebuild:
  Version bump.

  22 May 2012; Mike Frysinger <vapier@gentoo.org> +files/gzip-1.4-no-gets.patch,
  gzip-1.4.ebuild:
  Fix building with glibc-2.16+.

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> gzip-1.4.ebuild:
  keyword ~amd64-fbsd

  24 Apr 2012; Michał Górny <mgorny@gentoo.org> gzip-1.4.ebuild:
  Update to use mirror://.

  03 Apr 2011; Ulrich Mueller <ulm@gentoo.org> gzip-1.4.ebuild:
  Don't provide virtual/gzip, bug 358829.

  31 Jul 2010; Mike Frysinger <vapier@gentoo.org> gzip-1.4.ebuild,
  +files/gzip-1.4-assembler.patch:
  Add fix from upstream for USE=-pic building on x86 #309079.

  11 Feb 2010; Raúl Porcel <armin76@gentoo.org> gzip-1.4.ebuild:
  alpha/ia64/m68k/s390/sh stable wrt #300943

  11 Feb 2010; Tiago Cunha <tcunha@gentoo.org> gzip-1.4.ebuild:
  stable sparc, security bug 300943

  10 Feb 2010; Markus Meier <maekke@gentoo.org> gzip-1.4.ebuild:
  amd64/arm/x86 stable, bug #300943
