@@ -8,12 +8,22 @@ DIST gzip-1.4.tar.gz 907411 SHA256 d166cfd3da380da1bd535633e8890bfb5664f9e68870a
 DIST gzip-1.5.tar.xz 720956 SHA256 9ac20a3841a1246a8bedd800ea1fb93ef76521535d89cb59397d267026b6a173 SHA512 27b1b9c1ab75331b5368abb54541f3f251009a3bc6e49e42cda13bc088673d9f8c89c55caa63da60c1ea70fac2e6de24203b7aeaaaad4bc54302edbe275f46ea WHIRLPOOL c718e5e4e0e6f29de285380c25564997615b7213fa32604922436c3c6221bb9531d01518a6cc4e0a80b4694bb040768654d4bf07bb48290f90e61f13962e96ab
 EBUILD gzip-1.4.ebuild 1357 SHA256 95b40f0a4f6432d4d748a014d61c2ee0310ca0003d357fb6d9b1b183153582b2 SHA512 8a5188aaf64c57401bb218ba690c12a9a491d9e80719573a18a42f5306a42ac60777e7fbee366ec4e394b58e4d5a7bbe3f81d2a4cea7bf2ad7dd238b0bc52f98 WHIRLPOOL ef461eba586c8a45b1827d4244efab3872d7521f0a3449ad6e1a250c3538abf2309329937f6a12d254f71eb6512b9b1b98330536fae4a9f4056f060b766fba66
 EBUILD gzip-1.5.ebuild 1271 SHA256 8906524efe2c16c2326f58a57a0c6e4b00e1d095610396e4a47031e6e6a71c74 SHA512 6e949c9a3edec03f056a323b72c2308b77efcd5477bdf5a57b8c18c55802756646e48b8f5a51cb0e7c8a75d0545dc6ec468815146d8b92aec9b37b1ee1294866 WHIRLPOOL 402661a8d8647b07c7a8b710d0d8ecb86fe5a970fd3ab11bded8add9e33fcac3c90b07d528ffd653ecd9ddd9e5d56d824f7ef2a6c965b50727eda0a9141f7203
-MISC ChangeLog 17084 SHA256 c0013f27ae7642d63c6a62cbd3dbae268c306631f205f3172bda9d2c53acee90 SHA512 a152a41e07cdace72052c9874c987e5e5638641643bac1efce6bb0d1f4993f816f710e8c86eaae27920282c81ae3d93f4af106ddddde4dee3a019f15e6770f3d WHIRLPOOL ecc913178d73af2b2c0a628b66fb068bd65006ec6c4012bece871b3c25282873d21c7267d040c88bf71589476739a52016a01e0e7ac49358c018710be826af9b
-MISC metadata.xml 258 SHA256 3e8d2c98025402bd29168f46db0e4ed14ae2d64ee8e75508d87b136d06ba044c SHA512 fe541f144f9f9f14e041cd9481c964cc55c38579475221a76599dd81b2bd3e902c6c4b043d7897fd50c36d4e4efe38e51cc736d018b95341fee0b58d919bc985 WHIRLPOOL 8edc342ed57308000e6131785fb4401a4cf013a3b55dd498c4cd0ee73e2d3302d8da1e1d5b86a8845ccfd059a0b2b46cc00fb7e736d241633e9e827d31256e93
+MISC ChangeLog 17204 SHA256 34e7da25140e6a7cc1e6a2b85e85e5b5404a7ff08ddc84095c484e1684896a83 SHA512 8314c20823115f7b7cfcf814dadb936cce44c6db561fe7af023dfd16bbb00728cb8405ac812021fbb9a8cb0ee208b277479356fdbb887efd2bf8c42013891c7b WHIRLPOOL e3aa1b85c2ce0411355f11dc072b89259d86f4a1bd2623a225d92dbfa2504e00ea8589d7336b9430a3285e2d32463356a99173e1b612722e33550b88669e1341
+MISC metadata.xml 332 SHA256 04a052a90b1c0efb1f799fbbada1e3f9360fa215347ec9ec77e808af0fbbb8af SHA512 111506a79b87e69343b240bf513c236cb2532f063a0ae53e75b9704998e24beed17e724761264c24526ae2dc48a8ee9afe9e6f9059288dab84c8cbe3efc61246 WHIRLPOOL 422bfc388e85988b60126ab97fb98d8fa85b843a73c02cc03b8cb6bf8ec1f636678235426de5c4a9b695900e8fd5710b8aebe0f8eda27633035590eb5658946d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlBMvEEACgkQuQc30/atMkDT2ACffkBYtjlaWFF7qYtj2qlfECT7
-o48AoIIDzAbzjr8qo/oUWtsUnKU8ns7N
-=IKoa
+iQIcBAEBCAAGBQJRtpFRAAoJELEHsLL7fEFWnfYP/2NXAfo0w2bYW/R1sv0fYRI6
+TZT6pMZFttS1ViGR2s6lzsVOOBS3sdygs+gcXAg962LsoFB3D4KNZt1mCWdNjbDn
+US0lHwMHNgzULhX7CdiL4hV4gUdYM8T5ihKcznHT4zV5AzN8SoFSRzxATZhSS725
+QhkyRTg7whh6OTb6LEol/ry0YajUkt98Oiia7yNjUGvgjaYTgXTmyPnyWUbkIjwm
+MB0Y7UP/8W17WDokejZnq2bvCAjNlRjSQiA1mumuk4mdgSL90vAfzimnf34XtvrD
+i1g/I3PEXcJc0TRg+nik2jluZoIYH/026yFx0jsOlOKUcKqMo08RznuxX/xCJ1MW
+8+2dSFNV1qQbIoYNLazedbDlJLggFNYhx3rGmLgMKPzPHl3+M+z8Tlm7LLrMPBlL
+KrV585T+buEyHAWAKyijQPjipQIPdzwCi4k3rAS5cSUG8/9K1Wfoq7OMOQnmVJlO
+cykC1oZGTAvryVizuanQ6HNQTl2huC+KyEy2uCT+vJs/5rvW0I3jTeAMLaDzKM6F
+q9qatjoK6kUBiKqFDKU+vXRMbIcyFxWdTI20TXZ6EV6tawK2zA0I58Guz4zhVbDW
+ZAlwCf1NuJ88QbrMQhSGZV9FKd9T/qxqJddYjzjhXG5VdTi8EaKBAddAXN4PXQOB
+T37/akSeP/6Hjk65un0C
+=Apjv
 -----END PGP SIGNATURE-----
