@@ -2,6 +2,9 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <herd>base-system</herd>
+<upstream>
+ <remote-id type="cpe">cpe:/a:gnu:gzip</remote-id>
+</upstream>
 <use>
 <flag name='pic'>disable optimized assembly code that is not PIC friendly</flag>
 </use>
