@@ -2,9 +2,9 @@ DEFINED_PHASES=compile configure install prepare test unpack
 DEPEND=virtual/libusb:1 sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) dev-vcs/git
 DESCRIPTION=library for communicating with HackRF SDR platform
 EAPI=5
-HOMEPAGE=https://github.com/mossmann/hackrf
+HOMEPAGE=http://greatscottgadgets.com/hackrf/
 LICENSE=BSD
 RDEPEND=virtual/libusb:1
-SLOT=0
+SLOT=0/9999
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	cmake-utils	bc8bbf26de246f74e2901a3696ad96d6	eutils	f31a0ec0d081047cbf9c0bbb4822d831	flag-o-matic	d900015de4e092f26d8c0a18b6bd60de	git-2	e92e09651292b1bef5656592364550f7	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=1b854034bdd93412b1dbbe2157b16301
+_md5_=8a2c604f8fd3fcaf5014f4f3a54cc42f
