@@ -1,23 +1,25 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-EBUILD libhackrf-9999.ebuild 627 SHA256 8ace59f231c164e8d25146100050bf98af9728eb3fc1037eab16698f8123199d SHA512 124969efe4ca8b60ae77453e885404bbcf996ee4b80caea4594ca37e3fe73d98df354cb5d8dc04798442910b80056581fe2567f20c4e1591172b9fe3c309b6bc WHIRLPOOL 47be0e88e412908802b7e526185be0586bb589ca29ede7affe408872e27a218f37eed6e9f8d1ebcba66af88989632e5ed56658f5362e0805663fb6b0c7c6fff6
-MISC ChangeLog 609 SHA256 47f212299ff37afffcc10f048eca0549c866be5b98070aef89d180c7d3418a8f SHA512 b58188a77c51fe4e369686503b247a335096c5d9cf0cd5b45bea878f215133d82c4dc0b6db6ac6ab5a21a44af04e8e74179da711a8f3f22f62b54a5818ffbcb2 WHIRLPOOL 32962aae457b730f16b13b56dfc8776857a16f8bc6382fc3e4ffc72cf1df39b89d94a5f2da15084e2b30b58007d1a1bea797f16427bb8457f8bfc2a6babd071d
+DIST hackrf-2013.06.1.tar.xz 10127160 SHA256 094407282e9b8cb16f2244f364e664f0eb59cee2c6571495030d5d0597f34196 SHA512 5d226abdb2773ad224425f3449a175dbe2e88f14b49d7a38dc201c13863bc360695f6192d2a3cec18f5a4b3fbba806e3873936b84b7dc9112c6545717c5d066b WHIRLPOOL 1f992da1bfc124bf89c677e27a59863d2f86a8ff95b0cbce88f91bf3981c8bee9fe1b17eb96fd794113c589477c850d3cc36703134f467263b2c414e77153969
+EBUILD libhackrf-2013.06.1.ebuild 794 SHA256 a2c464eb0696ffbc5183bdf4bb17c59e0e9e6a9803311953cd43e33111debfa7 SHA512 0028365896756f84b798968432673b59f8eb59b01f9371f25a39d5dbf772c22cd257ec3f380efdf3706d3302e26c6b036ea43db4b2e09ec05415741bee4010d8 WHIRLPOOL bb0b03960f293732f541b5bc1ad51343fcc8d8fc129da6dbe5e1062e668f50c9edb92606fd5ccfac644dbb1ddf6af8a9051492f8b17b481e0b527bb2833a5cf6
+EBUILD libhackrf-9999.ebuild 789 SHA256 d7bec8654fd54c45ab7ed1c57b46a6bd16bf987ed6c51f9c6bf5035d72f684d4 SHA512 4ecf6e17d774c076deaea6d06fc57935f258db246c87ffedf5146f1269dfbf7a238edffb61e3608dc12743e8c2962aeb06a40b2f37a3d3b43cc4110bdda702d9 WHIRLPOOL 01065a58cfa1693a80c94bfca2f8709d95afb995f0260c4d6016bea8c97270ee2090656346464669fd73db132de6117df324d05d1259eae80d835daae0ff63aa
+MISC ChangeLog 789 SHA256 41b79068975b4b6d2bc1a5949960aa137db4ed94d3e555ecd8c8d39bc49cce21 SHA512 d58aa63f0a0cb7d985b79e6edd4dc75870db5e0cb5510fdd87529f67fc5ac9d5765fae72e840cbc784e1c74e4cc05e6830e522ff3e5084d50f8f7db17a97b3c2 WHIRLPOOL bb3bab9701c6db1f9e78f7bbea6943894200370df9b6aba9a4de2eb3f4a3ed16a9e66adde9a744112b7444c630aa8eeb1169b058661c6b92894510018d76ff8c
 MISC metadata.xml 294 SHA256 1485b34c998e250af244500c1cced68f647db31bd2031c199fc5f506d01c8dc3 SHA512 14b674bae262688185130cc4468c6aadfe37a519e121f6a44efe36d60c5274c14887d012df9d24ad6a1508f48cd3caf29bb3a32fe950930a7082004565dfa830 WHIRLPOOL 0150f55d5664769a4fdf1a5e0f76f1a8f97723f9e434ef71118612e493fc9204d6ac391423eac08c9e6b5634412cdab1a599920674dbaf736f0a9585af0063c7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRpDv5AAoJEKXdFCfdEflKZkYP/RKdZgu8nIi7NJo3B27Gp+EU
-TvIzWlfpw50y5ZQW//HMbRyYr8+fPDML8lGwASGjjyBI4Ebvt7VORORklIAITnWR
-UY7djonOj/IrTeCq9gYrJW5EhXQiB3iFR9YGYymL/ynixC+QFAjPmOwoTPN6aMZO
-E/VvJeccdiCsn4ZNAdyJdHETnih0xSTPIclyXKtyVQpE6MX8FPDGW2MFiQfsDGm1
-BdHEbJwGQMSQeJKwf/MwtY4EYkAj2k28oJMLJb+Cgc3da4HT6smFuV0FjpUDSeJ7
-kcy6WUPpEtLI99pY4MwqJYaFtk+FxdepFIuSa95bbZXJAj7ruiRqm/ruQf2CchTl
-1NXB3TlnyjgmDD0PkBJoPopZ71yzGRHMTAQPt0yWW1qUQ96IVGnWZp+sQmFpD06r
-2+N6lZoGACALJI7g+cbq4weG6GCITDQ2PVfB2QdVUN4Alla2x3tMrxsPXmu8QaAP
-A64VExaPno3SvBkMr+n4vo58itIaAweKxiSru/jyLXuuuJJkNjKqKH0vEg8TEtTi
-VZTqNVaE+va5f0gd6mcOtw77zRvhD3+FqcWsos0ZUNh3e9+nzoVQjvTfPtngzKwH
-gztrVg7eiKSvv2HmvYlrqwUlnyhLgW0Vv4LUr9qc9X+rse6rU6b4hobEFH74GRMV
-bu5VkevuFCofPKw9AQGH
-=qEOz
+iQIcBAEBCgAGBQJRtpKGAAoJEKXdFCfdEflKrU0QAKCk0FT9iXf/hObVAPJhruTi
+VH4ebP0flroznj5mCYH0Yn9BKBIxxadmKlfZPBdiTdI6RI60vxKker/Ghuon/BrM
+iPPdQXaG6jXX8Nfu7PjOqpQmNdBg4qEuGtEJviaDl1XJpnwgfMi5aNt7wxG6INty
+1g1JcxxijKUP6iFBzO3cgLxkYav6jt0txM4VS2cs9A1Mgq+s5EcmHGbgGJEb7xI4
+PPmVcZR8pWddae3g5o5uJN9KrGDWtOE5dPeuGfsaNsmieKE/hJhzXzj01KHUF90c
+zqE3vBdpv9mDFkZ4YnnNC2TIT0XQhcLnoQCBNVsqXNihg+JDiFCHPayQLZ8zlNqr
+tmwvB8DswT1h9iOauM0G5gY/6G2BfxalAEJZ8SnZZOkuQih4NH/MN7QY6cMh1/GA
+j+h30iiwv+hDzGhE1g0ittKaKU65gPNutUz6R5r3CttQDGk0lCGrw2bzpw0Qv10g
+GL5kDzWDXWGk0P825KkQXDWP+iqVhI+5hdzOgQLUBvWLKmSOUBGk2WurNQPLOA5B
+WSSGOofQQqEYSiBXC9P2bGLxh/F70RakrSNFmcFcheAHlZmRDpOXy77OnXrUjwuw
+AWv8rLTxt0X6CyFhlWhr7UkVMjpq3EtkH1H6jag+/ITteQTdmx547LiJEGy87o5r
+eJ2ZUDGzztpWF+EZgme1
+=jCh4
 -----END PGP SIGNATURE-----
