@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libhackrf/libhackrf-9999.ebuild,v 1.3 2013/06/11 02:57:58 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libhackrf/libhackrf-2013.06.1.ebuild,v 1.1 2013/06/11 02:57:58 zerochaos Exp $
 
 EAPI=5
 
