@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/libhackrf
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libhackrf/ChangeLog,v 1.3 2013/05/28 05:08:42 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libhackrf/ChangeLog,v 1.4 2013/06/11 02:57:58 zerochaos Exp $
+
+*libhackrf-2013.06.1 (11 Jun 2013)
+
+  11 Jun 2013; Rick Farina <zerochaos@gentoo.org> +libhackrf-2013.06.1.ebuild,
+  libhackrf-9999.ebuild:
+  stable version added, ebuild cleanup
 
   28 May 2013; Rick Farina <zerochaos@gentoo.org> libhackrf-9999.ebuild:
   everytime you don't quote a variable "" kills a kitten
