@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/gzip
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/gzip/ChangeLog,v 1.121 2012/09/09 15:56:45 armin76 Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-arch/gzip/ChangeLog,v 1.122 2013/06/11 02:54:02 vapier Exp $
+
+  11 Jun 2013; Mike Frysinger <vapier@gentoo.org> metadata.xml:
+  Add upstream CPE tag (security info) from ChromiumOS.
 
   09 Sep 2012; Raúl Porcel <armin76@gentoo.org> gzip-1.5.ebuild:
   alpha/ia64/m68k/s390/sh/sparc stable wrt #431844
